--- a/omega/components/omega_side/side/只写了一部分的开发文档.md
+++ b/omega/components/omega_side/side/只写了一部分的开发文档.md
@@ -13,7 +13,7 @@ Omega Side Python API 是一组实现 Omega Side Protocol 的异步高性能Pyth
 
 ## Omega Side Protocol / Omega旁加载协议
 ### **连接建立**
-使用 WebScoket 进行通信，消息/数据交换统一使用 json 完成，因此并不限制语言   
+使用 WebSocket 进行通信，消息/数据交换统一使用 json 完成，因此并不限制语言   
 omega 会通过配置启动一个子进程，子进程应该连接到启动参数所指定的webscoket服务器上  
 或者，在进行开发时，会希望脱离 Omega 的启动方式自行启动一个子进程，此时你也可以手动设置地址  
 
@@ -148,7 +148,7 @@ frame.add_plugin(test)
 ```
 
 - 获得 player 列表:
-和/list指令不一样的是，包含了 runtime ID, uinqueID, UUID 和 playerName  
+和/list指令不一样的是，包含了 runtime ID, uniqueID, UUID 和 playerName  
 -> {"client":c,"function":"get_players_list","args":{}}  
 <- {"client":c,"violate":false,"data":players_list} 
 ```python
