Translation and Enhancements for Script Engine Documents (#111)

--- a/doc/script_engine_cn/控制台.md
+++ b/doc/script_engine_cn/控制台.md
@@ -1,12 +1,13 @@
-# Console
+# 控制台
+
 ## `console.log([data][, ...args])`
 * `data` `<any>`
 * `...args` `<any>`
 
-Prints formatted message to `stdout` **with newline**
+将消息格式化输出到  `stdout` **(自动换行)**
 ```javascript
 const count = 5;
 console.log("count: %d", count);
 // Prints: count: 5, to stdout
 ```
-<!-- Partially copied from the documentation of Node.JS -->
+<!-- 部分复制自 Node.JS 的文档 --> 
