--- a/doc/script_engine_cn/模块.md
+++ b/doc/script_engine_cn/模块.md
@@ -1,6 +1,6 @@
-# Module
+# 模块
 ## `module.exports`
-Use this to export a value
+使用`module.exports`来导出值
 ```javascript
 // script2.js
 module.exports="123";
@@ -13,5 +13,5 @@ console.log(v);
 ```
 
 ## `module.require(name)`
-`name` `<string>` The name for the required script.
-Require a script in the same bundle. Will be `undefined` if not running in a bundle.
+`name` `<string>` 所需脚本的名称。
+需要同一脚本包中的脚本。如果未在脚本包中运行，则视为“undefined”。
